<resources>
    <string name="app_name">StretchEz</string>
    <string name="welcome">Welcome to StretchEz</string>
    <string name="start_stretching">Start Stretching</string>
    <string name="work_out_page">This is Workout Page</string>
    <string name="testing_time">02:00</string>
    <string name="formatted_time">%02d:%02d</string>
    <string name="complete_time">Complete!</string>
    <string name="finish_stretching">Congratulations!</string>
    <string name="repeat_button">Repeat</string>
    <string name="return_button">Back</string>
    <string name="stretch_plan_title">Enter a title for the Stretch Plan</string>
    <string name="stretch_plan_title_label">Title</string>
    <string name="stretch_plan_description_label">Description</string>
    <string name="stretch_plan_description">Enter a description for the Stretch Plan</string>
    <string name="stretch_plan_duration_label">Duration</string>
    <string name="stretch_plan_start_button">Start the Stretch Plan</string>
    <string name="new_stretchPlan">New StretchPlan</string>
    <string name="select_action">Select Actions</string>
    <string name="save_button">Save</string>
    <string name="no_title_toast">Please Give A Title</string>
    <string name="delete_plan_snackbar">Stretch Plan Deleted</string>
    <string name="undo_delete_snackbar">UNDO</string>
    <string name="title_1">title 1</string>
    <string name="title_2">title 2</string>
    <string name="title_3">title 3</string>
    <string name="title_4">title 4</string>
    <string name="title_5">title 5</string>
    <string name="head_title">Header Title</string>
    <string name="head_text">Header Text</string>
    <string name="subtitle">Subtitle</string>
</resources>