<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stretch_plan_title_label"/>

    <EditText
        android:id="@+id/stretch_plan_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stretch_plan_title"/>

    <Button
        android:id="@+id/select_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_action"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stretch_plan_description_label"/>

    <EditText
        android:id="@+id/stretch_plan_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stretch_plan_description"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stretch_plan_duration_label"/>

    <Button
        android:id="@+id/stretch_plan_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stretch_plan_start_button" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/stretch_plan_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/save_button"/>

        <Button
            android:id="@+id/stretch_plan_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/return_button"/>

    </LinearLayout>
</LinearLayout>